--- a/.github/workflows/run-portal-tests.yml
+++ b/.github/workflows/run-portal-tests.yml
@@ -18,7 +18,7 @@ on:
         type: string
 
       environment:
-        description: "Enter Environment Name (e.g., QAT1, QAT2, UAT, DEV)"
+        description: "Enter Environment Name (e.g., QAT, QAT1, UAT, DEV)"
         required: true
         type: string
 
@@ -42,7 +42,7 @@ jobs:
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
-      # 🔹 Normalize Portal & Folder (Case-Insensitive)
+      # Normalize Portal & Folder (case-insensitive)
       - id: normalize
         run: |
           INPUT_PORTAL="${{ github.event.inputs.portal }}"
@@ -65,11 +65,10 @@ jobs:
           echo "portal_actual=$PORTAL_NAME" >> $GITHUB_OUTPUT
           echo "folder_actual=$FOLDER_NAME" >> $GITHUB_OUTPUT
 
-      # 🔹 Create Matrix of Collections
+      # Create matrix of collections
       - id: set-matrix
         run: |
           BASE="postman/${{ steps.normalize.outputs.portal_actual }}/${{ steps.normalize.outputs.folder_actual }}"
-
           FILES=$(find "$BASE" -maxdepth 1 -name "*.json" -type f | jq -R -s -c 'split("\n")[:-1]')
 
           if [ "$FILES" = "[]" ]; then
@@ -79,11 +78,9 @@ jobs:
 
           echo "matrix={\"collection\":$FILES}" >> $GITHUB_OUTPUT
 
-
   run-tests:
     needs: discover
     runs-on: ubuntu-latest
-
     strategy:
       fail-fast: false
       matrix: ${{ fromJson(needs.discover.outputs.matrix) }}
@@ -101,50 +98,58 @@ jobs:
           npm install -g newman
           npm install -g newman-reporter-htmlextra
 
-      # 🔹 Resolve Environment & Optional TestData
+      # Resolve Environment & Optional Test Data
       - name: Resolve Environment & Test Data
         run: |
           PORTAL="${{ needs.discover.outputs.portal_actual }}"
           ENVIRONMENT_INPUT="${{ github.event.inputs.environment }}"
           TESTDATA_INPUT="${{ github.event.inputs.testdata }}"
 
-          # Find environment file (supports multiple QATs)
-          ENV_FILE=$(find postman/$PORTAL/env \
-            -iname "$ENVIRONMENT_INPUT.postman_environment.json" | head -n 1)
+          echo "Portal: $PORTAL"
+          echo "Environment Input: $ENVIRONMENT_INPUT"
 
-          if [ -z "$ENV_FILE" ]; then
-            echo "❌ Environment file not found!"
-            echo "Available environments:"
-            ls postman/$PORTAL/env
+          ENV_DIR="postman/$PORTAL/env"
+          if [ ! -d "$ENV_DIR" ]; then
+            echo "❌ Environment directory not found: $ENV_DIR"
             exit 1
           fi
 
-          echo "ENV_FILE=$ENV_FILE" >> $GITHUB_ENV
+          # Case-insensitive partial match for environment
+          ENV_FILE=$(find "$ENV_DIR" -type f -iname "*$ENVIRONMENT_INPUT*.postman_environment.json" | head -n 1)
+          if [ -z "$ENV_FILE" ]; then
+            echo "❌ Environment file not found!"
+            echo "Available files in $ENV_DIR:"
+            ls "$ENV_DIR"
+            exit 1
+          fi
+          echo "Using environment file: $ENV_FILE"
+          echo "ENV_FILE=$PWD/$ENV_FILE" >> $GITHUB_ENV
 
           # Optional testdata
           if [ -n "$TESTDATA_INPUT" ]; then
-            DATA_FILE=$(find postman/$PORTAL/testdata \
-              -iname "$TESTDATA_INPUT.csv" | head -n 1)
-
+            DATA_FILE=$(find postman/$PORTAL/testdata -type f -iname "*$TESTDATA_INPUT*.csv" | head -n 1)
             if [ -z "$DATA_FILE" ]; then
               echo "❌ TestData file not found!"
-              echo "Available testdata files:"
+              echo "Available testdata files in postman/$PORTAL/testdata:"
               ls postman/$PORTAL/testdata
               exit 1
             fi
-
-            echo "DATA_FILE=$DATA_FILE" >> $GITHUB_ENV
+            echo "DATA_FILE=$PWD/$DATA_FILE" >> $GITHUB_ENV
           else
             echo "DATA_FILE=" >> $GITHUB_ENV
           fi
 
-      # 🔹 Run Collection
+      # Run Collection (always generate report even if test fails)
       - name: Run Collection
         run: |
           COLLECTION="${{ matrix.collection }}"
           NAME=$(basename "$COLLECTION" .json)
 
           echo "🚀 Running $NAME"
+          echo "Using ENV_FILE=$ENV_FILE"
+          echo "Using DATA_FILE=$DATA_FILE"
+
+          set +e  # continue even if tests fail
 
           if [ -n "$DATA_FILE" ]; then
             newman run "$COLLECTION" \
@@ -159,9 +164,21 @@ jobs:
               --reporter-htmlextra-export "$NAME-report.html"
           fi
 
-      # 🔹 Upload Reports
+          EXIT_CODE=$?
+          echo "NEWMAN_EXIT_CODE=$EXIT_CODE" >> $GITHUB_ENV
+          exit 0
+
+      # Upload reports always
       - name: Upload Reports
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: reports-${{ needs.discover.outputs.portal_actual }}-${{ needs.discover.outputs.folder_actual }}-${{ github.event.inputs.environment }}
           path: "*-report.html"
+
+      # Fail job if any tests failed
+      - name: Fail Job If Tests Failed
+        if: env.NEWMAN_EXIT_CODE != '0'
+        run: |
+          echo "❌ Some test cases failed."
+          exit 1
